# fastapi-storage

./: README.md  main.py  pyproject.toml
libs/: cloudinary.py
router/: upload.py
