[tool.poetry]
name = "fastapi-storage"
version = "0.1.0"
description = ""
authors = ["ryanvincere <ryan@continuum.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cloudinary = "^1.39.1"
python-dotenv = "^1.0.1"
uvicorn = "^0.29.0"
fastapi = "^0.110.0"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
